Fixed send message button position on IE9.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -177,8 +177,9 @@ room-members-sidebar-width = 150px
       outline 0
 
   .send-button
-    position relative
-    top -11px
-    margin-right 0
+    position absolute
+    top 5px
+    right 5px
+    margin 0
     padding 8px
     font-size 14px
